--- a/gb/24/6/10/n14267914.md
+++ b/gb/24/6/10/n14267914.md
@@ -19,33 +19,33 @@
 <p>美国政府指责中国监控摄像头制造商“在中国（中共）对维吾尔人、哈萨克人和其他穆斯林少数民族成员实施镇压、大规模任意拘留和高科技监控运动中，涉入侵犯和践踏人权行为”，并因此于2019年将中国大华和海康威视列入商务部的贸易黑名单——实体清单上。</p>
 <p>责任编辑：李缘#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14574025.md#1">川普与普京会面前 五大焦点值得关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14574382.md#1">希拉里：若俄乌终战 提名川普拿诺贝尔和平奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14574415.md#1">克里姆林宫：预计双普会晤时长6至7小时</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14574571.md#1">组图：川普阿拉斯加笑迎普京</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/7/n10199292.md#1" target="_blank">古玉文：消灭私有制不是出路（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/17/n11801155.md#1" target="_blank">澳洲参议员：法轮功为中国所有良心犯争人权</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/31/n11757068.md#1" target="_blank">王友群：面对“八国联军”清军为何兵败如山倒</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/5/n11501516.md#1" target="_blank">欧洲千人法会 西方法轮功学员谈修炼感悟</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/18/n14597652.md#1">【未解之谜】前以色列政府高官爆料：银河联邦真的存在</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/17/n14596754.md#1">秋分节气为什么宝贵？ 老子说天地之气莫大于和</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/16/n14596170.md#1">天道酬勤 君子无逸</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/16/n4458549.md#1">还似洛妃乘雾去——读《红线传》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/22/n14600281.md#1">【未解之谜】科学家都信神？真相曝光！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/25/n14602803.md#1">【纪元焦点】习新疆之行 接见部队规格大降级</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/25/n14602818.md#1">【新闻大破解】川普联大演说对世界的影响</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/26/n14603439.md#1">【直播】川普前往纽约 出席莱德杯高尔夫球赛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/23/n14601224.md#1">台湾为何罕见宣布限制向南非出口芯片</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/23/n14601196.md#1">【十字路口】谁是演艺圈恶魔？于朦胧案酿中南海风暴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/24/n14601460.md#1">中共党魁访新疆 两军头未现身疑出事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/24/n14602093.md#1">58岁王祖贤现身健身房 状态被夸像40岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/24/n14601644.md#1">《暴君的厨师》李彩玟爆红 逾30部剧本邀约</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/23/n14601317.md#1">传于朦胧遭《三生三世》演员表除名 Netflix否认</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/23/n14601286.md#1">港歌后甄妮谈于朦胧案 轰陆娱圈如“鱿鱼游戏”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/23/n14601240.md#1">宋祖儿再被举报税务问题 持股公司只剩一家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/25/n14602440.md#1">美国公布新指南 高血压定义与标准已修改</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/24/n14601728.md#1">怎样谈恋爱才会成功？ 专家揭示预测指标</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/24/n14601627.md#1">人们应该用塑胶袋装农产品吗？ 专家释疑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/23/n14600787.md#1">美国“芝加哥悬日” 一年两次的奇景</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/25/n14602270.md#1">营养师：搭机前避免食用这些食物和饮料</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/10/n14267914.htm">忧间谍与人权侵犯 荷兰首都淘汰中国制摄像头</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267914.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
